--- a/deploymentadmin/autoconf/pom.xml
+++ b/deploymentadmin/autoconf/pom.xml
@@ -44,17 +44,17 @@
             <version>${osgi.version}</version>
         </dependency>
         <dependency>
-            <groupId>${pom.groupId}</groupId>
+            <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.dependencymanager</artifactId>
 			<version>4.1.1</version>
         </dependency>
         <dependency>
-            <groupId>${pom.groupId}</groupId>
+            <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.deploymentadmin</artifactId>
             <version>0.9.6</version>
         </dependency>
         <dependency>
-            <groupId>${pom.groupId}</groupId>
+            <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.metatype</artifactId>
             <version>1.1.2</version>
         </dependency>
@@ -105,4 +105,9 @@
             </plugin>
         </plugins>
     </build>
+	<scm>
+		<connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/deploymentadmin/autoconf</connection>
+		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/deploymentadmin/autoconf</developerConnection>
+		<url>http://svn.apache.org/viewvc/felix/trunk/deploymentadmin/autoconf</url>
+	</scm>
 </project>
