--- a/gogo/gogo-parent/pom.xml
+++ b/gogo/gogo-parent/pom.xml
@@ -39,6 +39,12 @@
                 <version>4.5</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.10.19</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
