--- a/configadmin/pom.xml
+++ b/configadmin/pom.xml
@@ -187,6 +187,7 @@
                         </Bundle-Activator>
                         <Export-Package>
                             <!-- just list, version from package-info classes -->
+                            <!-- when the spec version changes, update the service property that includes the spec version in ConfigurationManager -->
                             org.apache.felix.cm;
                             org.apache.felix.cm.file,
                             org.osgi.service.cm;provide:=true;version=1.5
@@ -201,19 +202,9 @@
                             <!-- overwrite version from compendium bundle -->
                             org.osgi.service.log;version="1.3"
                         </DynamicImport-Package>
-						<Export-Service>
-							org.osgi.service.cm.ConfigurationAdmin;
-								service.description="Configuration Admin Service Specification 1.5 Implementation";
-								service.pid="org.osgi.service.cm.ConfigurationAdmin";
-								service.vendor="Apache Software Foundation",
-							org.apache.felix.cm.PersistenceManager;
-								service.description="Platform Filesystem Persistence Manager";
-								service.pid="org.apache.felix.cm.file.FilePersistenceManager";
-								service.vendor="Apache Software Foundation"
-						</Export-Service>
-						<Import-Service>
-							org.osgi.service.log.LogService;availability:=optional;multiple:=false
-						</Import-Service>
+                        <Provide-Capability>osgi.service;objectClass:List&lt;String>="org.osgi.service.cm.ConfigurationAdmin",
+                        osgi.service;objectClass:List&lt;String>="org.apache.felix.cm.PersistenceManager"</Provide-Capability>
+                        <Require-Capability>osgi.service;filter:="(objectClass=org.osgi.service.log.LogService)";effective:=active;resolution:=optional</Require-Capability>
                         <Embed-Dependency>
                             org.osgi.core;inline=org/osgi/util/tracker/ServiceTracker*|org/osgi/util/tracker/AbstractTracked.class
                         </Embed-Dependency>
