--- a/connect/pom.xml
+++ b/connect/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>org.osgi.compendium</artifactId>
             <version>5.0.0</version>
         </dependency>
+        <dependency>
+		<groupId>org.jboss</groupId>
+			<artifactId>jboss-vfs</artifactId>
+			<version>3.2.11.Final</version>
+		</dependency>
     </dependencies>
     <repositories />
     <pluginRepositories />
