--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -30,7 +30,7 @@
     <artifactId>felix-parent</artifactId>
     <packaging>pom</packaging>
     <name>Apache Felix</name>
-    <version>4-SNAPSHOT</version>
+    <version>4</version>
     <url>http://felix.apache.org/</url>
     <inceptionYear>2006</inceptionYear>
     <description>Apache Felix is a community effort to implement the OSGi Framework and Service platform and other interesting OSGi-related technologies.</description>
@@ -73,9 +73,9 @@
     </mailingLists>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/pom</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/pom</developerConnection>
-        <url>http://svn.apache.org/viewvc/felix/trunk/pom/?root=Apache-SVN</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/releases/felix-parent-4</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/felix-parent-4</developerConnection>
+        <url>http://svn.apache.org/viewvc/felix/releases/?root=Apache-SVN/felix-parent-4</url>
     </scm>
 
     <distributionManagement>
@@ -388,7 +388,7 @@
                                                 </goals>
                                             </pluginExecutionFilter>
                                             <action>
-                                                 <ignore/>
+                                                 <ignore />
                                             </action>
                                         </pluginExecution>
                                         <pluginExecution>
@@ -403,7 +403,7 @@
                                                 </goals>
                                             </pluginExecutionFilter>
                                             <action>
-                                                 <ignore/>
+                                                 <ignore />
                                             </action>
                                         </pluginExecution>
                                         <pluginExecution>
