--- a/http/jetty/pom.xml
+++ b/http/jetty/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>org.apache.felix.http.parent</artifactId>
-        <version>9</version>
+        <version>10-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -191,7 +191,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.http.base</artifactId>
-            <version>3.0.8</version>
+            <version>3.0.9-SNAPSHOT</version>
         </dependency>
   <!-- Testing -->
         <dependency>
