--- a/http/sslfilter/pom.xml
+++ b/http/sslfilter/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-servlet</artifactId>
-          <version>${jetty.version}</version>
+          <version>9.2.15.v20160210</version>
           <scope>test</scope>
         </dependency>
 
