--- a/tools/org.apache.felix.scr.ant/pom.xml
+++ b/tools/org.apache.felix.scr.ant/pom.xml
@@ -58,19 +58,19 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.generator</artifactId>
-            <version>1.13.1-SNAPSHOT</version>
+            <version>1.14.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.9.13-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
-            <version>1.2.9-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
