--- a/tools/maven-scr-plugin/pom.xml
+++ b/tools/maven-scr-plugin/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.generator</artifactId>
-            <version>1.13.1-SNAPSHOT</version>
+            <version>1.14.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
