--- a/tools/org.apache.felix.scr.bnd/pom.xml
+++ b/tools/org.apache.felix.scr.bnd/pom.xml
@@ -54,13 +54,13 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.generator</artifactId>
-            <version>1.13.1-SNAPSHOT</version>
+            <version>1.14.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.9.13-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- bndlib is provided at runtime (it neither needs to be considered by the maven-shade-plugin nor as transitive dependency by Maven) -->
