--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -66,7 +66,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.apache.felix.converter.impl.Activator</Bundle-Activator>
-                        <Private-Package>org.apache.felix.converter.*</Private-Package>
+                        <Private-Package>org.apache.felix.converter.*,org.yaml.snakeyaml.*</Private-Package>
                         <Export-Package>org.osgi.service.converter</Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
