--- a/scr-ext-anno/pom.xml
+++ b/scr-ext-anno/pom.xml
@@ -17,8 +17,7 @@
  specific language governing permissions and limitations
  under the License.
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.felix</groupId>
@@ -27,16 +26,16 @@
         <relativePath />
     </parent>
   <artifactId>org.apache.felix.scr.ext.anno</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
     <name>Apache Felix Declarative Services Extensions BND annotation</name>
     <description>
         BND meta-annotation for adding felix ds extension attributes
 	to generated xml component descriptors
     </description>
      <scm>
-        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-ext-anno</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-ext-anno</developerConnection>
-        <url>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-ext-anno</url>
+        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.ext.anno-1.0.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.ext.anno-1.0.0</developerConnection>
+        <url>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.ext.anno-1.0.0</url>
     </scm>
  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
